--- a/.github/workflows/readmeupdate.yml
+++ b/.github/workflows/readmeupdate.yml
@@ -1,9 +1,9 @@
-name: Generate REAME.md File
+name: Generate README.md File
 
 on:
   push:
     branches:
-      - master
+      - main
   schedule:
     - cron: '9 */6 * * *'
 
