--- a/.github/workflows/readmeupdate.yml
+++ b/.github/workflows/readmeupdate.yml
@@ -38,5 +38,6 @@ jobs:
           git add .
           git commit -m "Update README"
           git push -u https://${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git update
+          gh auth login --with-token
           gh pr create --fill
           gh pr merge -d -m
