--- a/.github/workflows/readmeupdate.yml
+++ b/.github/workflows/readmeupdate.yml
@@ -38,6 +38,6 @@ jobs:
           git add .
           git commit -m "Update README"
           git push -u https://${{ secrets.GITHUB_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git update
-          echo "${{ secrets.GITHUB_TOKEN }}" | gh auth login --with-token
+          echo "${{ secrets.MY_TOKEN }}" | gh auth login --with-token
           gh pr create --head update --fill
           gh pr merge -d -m
