--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -16,3 +16,5 @@ jobs:
           plugin_achievements: yes
           plugin_achievements_secrets: yes      # Display unlocked secrets achievements
           plugin_achievements_display: compact  # Use compact display
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year # Display full year instead of half year
