--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -19,3 +19,4 @@ jobs:
           plugin_isocalendar: yes
           plugin_isocalendar_duration: full-year # Display full year instead of half year
           plugin_pagespeed: yes
+          plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
