--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -20,3 +20,6 @@ jobs:
           plugin_isocalendar_duration: full-year # Display full year instead of half year
           plugin_pagespeed: yes
           plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
+          plugin_languages: yes
+          plugin_languages_ignored: html, css, latex
+          plugin_languages_details: bytes-size, percentage
