--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -21,5 +21,5 @@ jobs:
           plugin_pagespeed: yes
           plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
           plugin_languages: yes
-          plugin_languages_ignored: html, css, latex
+          plugin_languages_ignored: html, css, tex, ipynb
           plugin_languages_details: bytes-size, percentage
