--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -28,7 +28,7 @@ jobs:
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v2.5.0
         with:
-          target_branch: main
+          target_branch: snek-output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
