--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   test-python:
+    name: Run python script
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -22,15 +23,3 @@ jobs:
 
       - name: Run python script
         run: python generate.py
-
-  test-nim:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Set up Nim
-        uses: jiro4989/setup-nim-action@v1
-        with:
-          nim-version: 'stable'
-      - name: Run nim script
-        run: nim r generate.nim
