fix: try to fix pagespeed error ffs part 2 :rocket:

--- a/.github/workflows/metrics_new.yml
+++ b/.github/workflows/metrics_new.yml
@@ -72,12 +72,9 @@ jobs:
         uses: lowlighter/metrics@latest
         with:
           filename: metrics.plugin.pagespeed.svg
-          token: NOT_NEEDED
-          committer_token: ${{ secrets.GITHUB_TOKEN }}
-          base: ""
           plugin_pagespeed: yes
+          plugin_pagespeed_detailed: yes
           plugin_pagespeed_token: ${{ secrets.PAGESPEED_TOKEN }}
-          plugins_errors_fatal: ${{ github.repository == 'lowlighter/lowlighter' }}
 
       - name: 🧑‍🤝‍🧑 People plugin (followers)
         if: ${{ success() || failure() }}
